# secure-data-transfer

./: README.md
backend-sdt/: app.py  models.py  pyproject.toml  utils.py
backend-sdt/migrations/versions/: 8de48b73f339_create_message_table.py
frontend-sdt/: package-lock.json  package.json
frontend-sdt/src/: app.html
frontend-sdt/src/routes/: +page.svelte
frontend-sdt/src/routes/decrypt/: +page.svelte
frontend-sdt/static/: global.css
