[tool.poetry]
name = "backend-SDT"
version = "0.1.0"
description = ""
authors = ["GeorgyPk <georgy.pokazeev@tak.fi>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
cryptography = "^43.0.1"
flask-migrate = "^4.0.7"
psycopg2 = "^2.9.9"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
